--- a/Languages/English/Keyed/QuestionableEthics.xml
+++ b/Languages/English/Keyed/QuestionableEthics.xml
@@ -116,4 +116,8 @@
 
 	<!-- version 1.04 Patch -->
 	<QE_OrganVatDebugFinishGrowingDescription>Instantly finishes growing the organ.</QE_OrganVatDebugFinishGrowingDescription>
+	<QE_JobFailReasonNoBillsQueued>No bills currently queued</QE_JobFailReasonNoBillsQueued>
+	<QE_JobFailReasonPawnRestriction>{0} is restricted to worker {PAWN_labelShort}</QE_JobFailReasonPawnRestriction>
+	<QE_JobFailReasonGrowerBusy>{0} is already growing a recipe</QE_JobFailReasonGrowerBusy>
+	<QE_JobFailReasonCannotReserve>{PAWN_labelShort} cannot reserve {1}</QE_JobFailReasonCannotReserve>
 </LanguageData>
