--- a/Languages/English/Keyed/QuestionableEthics.xml
+++ b/Languages/English/Keyed/QuestionableEthics.xml
@@ -132,4 +132,7 @@
 	<QE_BrainTemplatingRequiresClone>Brain Template surgery requires Clone</QE_BrainTemplatingRequiresClone>
 	<QE_BrainTemplatingRequiresCloneTooltip>When true, only allows Brain Templates to be applied to pawns with 'Clone' hediff. Default = true</QE_BrainTemplatingRequiresCloneTooltip>
 
+	<!-- version 1.3.0 Patch -->
+	<QE_GenomeSequencerDescription_Hediffs>Hediffs</QE_GenomeSequencerDescription_Hediffs>
+
 </LanguageData>
