Update Japanese Translation for Ideo v1.5.4
fixed jobString.

--- a/1.3/Languages/Japanese/DefInjected/RecipeDef/Recipes_OrganVat.xml
+++ b/1.3/Languages/Japanese/DefInjected/RecipeDef/Recipes_OrganVat.xml
@@ -28,7 +28,7 @@
   <QE_Natural_Eye.jobString>未知のレシピです。</QE_Natural_Eye.jobString>
   <QE_Natural_Ear.jobString>未知のレシピです。</QE_Natural_Ear.jobString>
   <QE_Natural_Nose.jobString>未知のレシピです。</QE_Natural_Nose.jobString>
-  <QE_Natural_Tongue.label>未知のレシピです。</QE_Natural_Tongue.label>
+  <QE_Natural_Tongue.jobString>未知のレシピです。</QE_Natural_Tongue.jobString>
   <QE_Natural_Jaw.jobString>未知のレシピです。</QE_Natural_Jaw.jobString>
   <QE_Natural_Spine.jobString>未知のレシピです。</QE_Natural_Spine.jobString>
   <QE_Natural_Pelvis.jobString>未知のレシピです。</QE_Natural_Pelvis.jobString>
