Added beard, tattoo and favourite color to the genome sequencer

--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for QuestionableEthicsEnhanced
 
+1.3.4 - Added beard, tattoo and favourite color to the genome sequencer
+
+
 1.3.3 - Fixed the ideology specific patches not applying.
 Used DeepL to update translations for Japanese
 
