--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for QuestionableEthicsEnhanced
 
+1.3.6 - Added support for [url=https://steamcommunity.com/sharedfiles/filedetails/?id=2830943477]Animal Genetics[/url]
+
+
 1.3.5 - Eye-color and facial style from [url=https://steamcommunity.com/workshop/filedetails/?id=1635901197]Facial Animation[/url] will now also be cloned.
 
 
