--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for QuestionableEthicsEnhanced
 
+1.4.1 - Mod updated for 1.4 and passed autotests
+
+
 1.3.6 - Added support for [url=https://steamcommunity.com/sharedfiles/filedetails/?id=2830943477]Animal Genetics[/url]
 
 
