--- a/Languages/German/Keyed/QuestionableEthics.xml
+++ b/Languages/German/Keyed/QuestionableEthics.xml
@@ -117,4 +117,6 @@
   <QE_BrainTemplatingRequiresCloneTooltip>Wenn true, können Hirnschablonen nur auf Bauern mit 'Clone'-Hediff angewendet werden. Standard = true</QE_BrainTemplatingRequiresCloneTooltip>
   <QE_GenomeSequencerDescription_Hediffs>Absicherungen</QE_GenomeSequencerDescription_Hediffs>
   <QE_MessagestapledPawnEnslaved>{0} wurde von {1} mit einer Nervenklammer versklavt</QE_MessagestapledPawnEnslaved>
+  <QE_UseFillingGraphic>Visualisierung der Zutatenfüllung</QE_UseFillingGraphic>
+  <QE_UseFillingGraphicTooltip>Zeigen Sie weiterhin an, dass sich die Wanne mit Ressourcen füllt, anstatt leer angezeigt zu werden, bis sie gefüllt ist.</QE_UseFillingGraphicTooltip>
 </LanguageData>
