--- a/Languages/French/Keyed/QuestionableEthics.xml
+++ b/Languages/French/Keyed/QuestionableEthics.xml
@@ -117,4 +117,6 @@
   <QE_BrainTemplatingRequiresCloneTooltip>Lorsque cette option est activée, les modèles de cerveau ne peuvent être appliqués qu'aux pions ayant un hediff 'Clone'. Valeur par défaut = true</QE_BrainTemplatingRequiresCloneTooltip>
   <QE_GenomeSequencerDescription_Hediffs>Hediffs</QE_GenomeSequencerDescription_Hediffs>
   <QE_MessagestapledPawnEnslaved>{0} a été asservi par {1} en utilisant une agrafe nerveuse.</QE_MessagestapledPawnEnslaved>
+  <QE_UseFillingGraphic>Visualiser le remplissage des ingrédients</QE_UseFillingGraphic>
+  <QE_UseFillingGraphicTooltip>Montrer que la cuve se remplit de ressources au lieu d'être vide jusqu'à ce qu'elle soit remplie.</QE_UseFillingGraphicTooltip>
 </LanguageData>
