--- a/Languages/Russian/Keyed/QuestionableEthics.xml
+++ b/Languages/Russian/Keyed/QuestionableEthics.xml
@@ -117,4 +117,6 @@
   <QE_BrainTemplatingRequiresCloneTooltip>При значении true позволяет применять шаблоны мозгов только к пешкам с hediff 'Clone'. По умолчанию = true</QE_BrainTemplatingRequiresCloneTooltip>
   <QE_GenomeSequencerDescription_Hediffs>Hediffs</QE_GenomeSequencerDescription_Hediffs>
   <QE_MessagestapledPawnEnslaved>{0} был порабощен {1} с помощью нервной скобы</QE_MessagestapledPawnEnslaved>
+  <QE_UseFillingGraphic>Визуализация наполнения ингредиентами</QE_UseFillingGraphic>
+  <QE_UseFillingGraphicTooltip>Показывать заполнение резервуара ресурсами, а не показывать его пустым до заполнения</QE_UseFillingGraphicTooltip>
 </LanguageData>
