--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for QuestionableEthicsEnhanced
 
+1.4.5 - Added support for genes and xenotypes for clones.
+
+
 1.4.4 - Added option to disable the filling graphics.
 Used DeepL to update translations for ChineseSimplified, French, German, Japanese, Russian
 
