--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,9 @@
 # Changelog for QuestionableEthicsEnhanced
 
+1.5.4 - When cloning a creepjoiner, it wont end well
+Used DeepL to update translations for ChineseSimplified, French, German, Japanese, Russian
+
+
 1.5.3 - Added support for [url=https://steamcommunity.com/sharedfiles/filedetails/?id=2920385763]Vanilla Nutrient Paste Expanded[/url]
 
 
