--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for QuestionableEthicsEnhanced
 
+1.5.6 - Should work better with races that for some reason have multiple baby stages
+
+
 1.5.5 - Should work better with races that have a higher age-limit for child stage
 
 
