--- a/Languages/Japanese/Keyed/QuestionableEthics.xml
+++ b/Languages/Japanese/Keyed/QuestionableEthics.xml
@@ -137,4 +137,8 @@
   <QE_UseFillingGraphic>食材の充填を視覚化する</QE_UseFillingGraphic>
   <QE_UseFillingGraphicTooltip>桶が満杯になるまで空として表示される代わりに、桶が資源で満杯になるまで表示される。</QE_UseFillingGraphicTooltip>
   <QE_MessageCloningFailedAnomaly>ゲノム配列の異常によりクローニングに大失敗。</QE_MessageCloningFailedAnomaly>
+  <QE_GenomeSequencerRejectExcludedHediffShort>ゲノムシークエンシングを除くのヘディフ</QE_GenomeSequencerRejectExcludedHediffShort>
+  <QE_BrainScanningRejectExcludedHediffShort>脳スキャンを除くのヘディフ</QE_BrainScanningRejectExcludedHediffShort>
+  <QE_TemplatingRejectExcludedRaceShort>無効レース</QE_TemplatingRejectExcludedRaceShort>
+  <QE_BrainScanDescription_Expertises>蓄積された専門知識</QE_BrainScanDescription_Expertises>
 </LanguageData>
