Large update by cvrunmin Brainscan and genome sequence will be shown in surgeries with reason if disabled Support for [url=https://steamcommunity.com/sharedfiles/filedetails/?id=3400246558]Vanilla Skills Expanded[/url] Support for blocking scanning or genome sequencing via modextensions Support for customizing hediff visualisation and handling Brainscanning now saves backstories correctly Workaround for Alpha Implants destructive patching of recipes Used DeepL to update translations for ChineseSimplified, French, German, Japanese, Russian

--- a/Languages/ChineseSimplified/Keyed/QuestionableEthics.xml
+++ b/Languages/ChineseSimplified/Keyed/QuestionableEthics.xml
@@ -124,4 +124,5 @@
   <QE_BrainScanningRejectExcludedHediffShort>hediff阻止大脑扫描</QE_BrainScanningRejectExcludedHediffShort>
   <QE_TemplatingRejectExcludedRaceShort>无效种族</QE_TemplatingRejectExcludedRaceShort>
   <QE_BrainScanDescription_Expertises>储存的专业知识</QE_BrainScanDescription_Expertises>
+  <QE_VatGrowerDebugFill>故障：加注流体</QE_VatGrowerDebugFill>
 </LanguageData>
