--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,15 @@
 # Changelog for QuestionableEthicsEnhanced
 
+1.5.8 - Large update by cvrunmin
+Brainscan and genome sequence will be shown in surgeries with reason if disabled
+Support for [url=https://steamcommunity.com/sharedfiles/filedetails/?id=3400246558]Vanilla Skills Expanded[/url]
+Support for blocking scanning or genome sequencing via modextensions
+Support for customizing hediff visualisation and handling
+Brainscanning now saves backstories correctly
+Workaround for Alpha Implants destructive patching of recipes
+Used DeepL to update translations for ChineseSimplified, French, German, Japanese, Russian
+
+
 1.5.7 - Xenotype and other gene-support
 Skills will no loger be all disabled after cloning
 Added support for [url=https://steamcommunity.com/sharedfiles/filedetails/?id=2898044088][BT] SpawnThoseGenes![/url]
