--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for QuestionableEthicsEnhanced
 
+1.5.9 - Fix for the issue in the last update when biotech is not active
+
+
 1.5.8 - Large update by cvrunmin
 Brainscan and genome sequence will be shown in surgeries with reason if disabled
 Support for [url=https://steamcommunity.com/sharedfiles/filedetails/?id=3400246558]Vanilla Skills Expanded[/url]
